syntax = "proto3";

package feed.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/boykush/foresee/services/feed/gen/go/feed/v1;feedv1";

// Feed represents an RSS/Atom feed source
message Feed {
  // Unique identifier for the feed (UUID)
  string id = 1;
  // URL of the feed
  string url = 2;
  // Title of the feed
  string title = 3;
  // When the feed was added
  google.protobuf.Timestamp created_at = 4;
}

// Article represents a single article from a feed
message Article {
  // Unique identifier for the article (UUID)
  string id = 1;
  // ID of the feed this article belongs to (UUID)
  string feed_id = 2;
  // Title of the article
  string title = 3;
  // URL of the article
  string url = 4;
  // When the article was published
  google.protobuf.Timestamp published_at = 5;
}

// ListFeedsRequest is the request for listing feeds
message ListFeedsRequest {}

// ListFeedsResponse is the response for listing feeds
message ListFeedsResponse {
  // List of feeds
  repeated Feed feeds = 1;
}

// ListArticlesRequest is the request for listing articles
message ListArticlesRequest {
  // Optional feed ID to filter articles by feed
  optional string feed_id = 1;
}

// ListArticlesResponse is the response for listing articles
message ListArticlesResponse {
  // List of articles
  repeated Article articles = 1;
}

// HealthCheckRequest is the request for health check
message HealthCheckRequest {
  string service = 1;
}

// HealthCheckResponse is the response for health check
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

// FeedService manages RSS/Atom feed data
service FeedService {
  // HealthCheck checks if the service is healthy
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  // ListFeeds returns a list of all feeds
  rpc ListFeeds(ListFeedsRequest) returns (ListFeedsResponse);
  // ListArticles returns a list of articles, optionally filtered by feed
  rpc ListArticles(ListArticlesRequest) returns (ListArticlesResponse);
}
